--- a/Projeto_final.ipynb
+++ b/Projeto_final.ipynb
@@ -56,7 +56,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32a10180-5bec-45bc-dafe-664bca7da1c8"
+        "outputId": "32a10180-5bec-45bc-dafe-664bca7da1c8",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -68,6 +69,172 @@
             "Nome: Tanque A |Tipo: tanque |T: 85 °C| P: 2 bar |Vazão: 20 L/min |pH: 8\n",
             "Nome: trocador H1 |Tipo: trocador de calor |T: 120 °C| P: 2.3 bar |Vazão: 5 L/min |pH: -\n",
             "Nome: coluna 2B |Tipo: Coluna de destilação |T: 60 °C| P: 0.8 bar |Vazão: 2 L/min |pH: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Faixas_de_segurança = {\n",
+        "    \"reator\": {\n",
+        "        \"temp_min\": 55,\n",
+        "        \"temp_max\": 90,\n",
+        "        \"psi_min\" : 2.8,\n",
+        "        \"psi_max\" : 15,\n",
+        "        \"vazão_min\": 18,\n",
+        "        \"vazão_max\": 35,\n",
+        "        \"pH_min\": 6.5,\n",
+        "        \"pH_max\": 14\n",
+        "    },\n",
+        "    \"Tanque\": {\n",
+        "        \"temp_min\": 60,\n",
+        "        \"temp_max\": 100,\n",
+        "        \"psi_min\": 1.5,\n",
+        "        \"psi_max\": 4,\n",
+        "        \"vazão_min\": 10,\n",
+        "        \"vazão_max\": 30,\n",
+        "        \"pH_min\": 6.5,\n",
+        "        \"pH_max\": 11\n",
+        "    },\n",
+        "    \"Trocador\": {\n",
+        "        \"temp_min\": 100,\n",
+        "        \"temp_max\": 300,\n",
+        "        \"psi_min\": 1.8,\n",
+        "        \"psi_max\": 4.5,\n",
+        "        \"vazão_min\": 3,\n",
+        "        \"vazão_max\": 10\n",
+        "    },\n",
+        "    \"Coluna\": {\n",
+        "        \"temp_min\": 40,\n",
+        "        \"temp_max\": 90,\n",
+        "        \"psi_min\": 0.7,\n",
+        "        \"psi_max\": 1,\n",
+        "        \"vazão_min\": 1,\n",
+        "        \"vazão_max\": 2.5,\n",
+        "        \"pH_min\": 4.5,\n",
+        "        \"pH_max\": 7\n",
+        "    },\n",
+        "}\n",
+        "Faixas_de_segurança"
+      ],
+      "metadata": {
+        "id": "Yd9HxHjf8PqC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Listas\n",
+        "#contém a operação utilizada na planta.\n",
+        "#seu conteúdo: nome,tipo,temperatura,pressão,vazão,pH.\n",
+        "operações_unitárias=[\n",
+        "  [\"Reator 1\",\"reator\", 70, 3.5, 20 , 11],\n",
+        "  [\"Tanque A\",\"Tanque\", 85, 2, 20, 8],\n",
+        "  [\"trocador H1\",\"Trocador\",120,2.3,5,\"-\"],\n",
+        "  [\"coluna 2B\",\"Coluna\", 60,0.8,2,5]]\n",
+        "\n",
+        "Faixas_de_segurança = {\n",
+        "    \"reator\": {\n",
+        "        \"temp_min\": 55,\n",
+        "        \"temp_max\": 90,\n",
+        "        \"psi_min\" : 2.8,\n",
+        "        \"psi_max\" : 15,\n",
+        "        \"vazão_min\": 18,\n",
+        "        \"vazão_max\": 35,\n",
+        "        \"pH_min\": 6.5,\n",
+        "        \"pH_max\": 14\n",
+        "    },\n",
+        "    \"Tanque\": {\n",
+        "        \"temp_min\": 60,\n",
+        "        \"temp_max\": 100,\n",
+        "        \"psi_min\": 1.5,\n",
+        "        \"psi_max\": 4,\n",
+        "        \"vazão_min\": 10,\n",
+        "        \"vazão_max\": 30,\n",
+        "        \"pH_min\": 6.5,\n",
+        "        \"pH_max\": 11\n",
+        "    },\n",
+        "    \"Trocador\": {\n",
+        "        \"temp_min\": 100,\n",
+        "        \"temp_max\": 300,\n",
+        "        \"psi_min\": 1.8,\n",
+        "        \"psi_max\": 4.5,\n",
+        "        \"vazão_min\": 3,\n",
+        "        \"vazão_max\": 10\n",
+        "    },\n",
+        "    \"Coluna\": {\n",
+        "        \"temp_min\": 40,\n",
+        "        \"temp_max\": 90,\n",
+        "        \"psi_min\": 0.7,\n",
+        "        \"psi_max\": 1,\n",
+        "        \"vazão_min\": 1,\n",
+        "        \"vazão_max\": 2.5,\n",
+        "        \"pH_min\": 4.5,\n",
+        "        \"pH_max\": 7\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "def dentro_faixa(operação_unitária):\n",
+        "  nome, tipo, temperatura, pressão, vazão, pH = operação_unitária\n",
+        "  regras = Faixas_de_segurança.get(tipo, None)\n",
+        "  if regras is None:\n",
+        "    return True #se não tiver regra, consideramos ok\n",
+        "  if not (regras[\"temp_min\"] <= temperatura <= regras[\"temp_max\"]):\n",
+        "    return False\n",
+        "  if not (regras[\"psi_min\"] <= pressão <= regras[\"psi_max\"]):\n",
+        "    return False\n",
+        "  if not (regras[\"vazão_min\"] <= vazão <= regras[\"vazão_max\"]):\n",
+        "    return False\n",
+        "  if pH != \"-\" and \"pH_min\"in regras:\n",
+        "      if not (regras[\"pH_min\"] <= float(pH) <= regras[\"pH_max\"]):\n",
+        "          return False\n",
+        "  return True\n",
+        "for u in operações_unitárias:\n",
+        "  print(u[0], \"dentro da faixa?\", dentro_faixa(u))\n",
+        "\n",
+        "def registrar_medicao(entrada):\n",
+        "  partes = entrada.split(\";\")\n",
+        "  nome = partes[0].strip()\n",
+        "\n",
+        "  medidas = {}\n",
+        "  for pedaco in partes[1:]:\n",
+        "      pedaco = pedaco.strip()\n",
+        "      if \"=\" in pedaco:\n",
+        "          k, v = pedaco.split(\"=\")\n",
+        "          medidas[k.strip().lower()] = v.strip()\n",
+        "  for u in operações_unitárias:\n",
+        "      if u [0] == nome:\n",
+        "        if \"T\" in medidas:\n",
+        "          u[2] = float(medidas[\"T\"])\n",
+        "        if \"P\" in medidas:\n",
+        "          u[3] = float(medidas[\"P\"])\n",
+        "        if \"V\" in medidas:\n",
+        "          u[4] = float(medidas[\"V\"])\n",
+        "        if \"pH\" in medidas:\n",
+        "          u[5] = float(medidas[\"pH\"])\n",
+        "        break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eg6uZ3-gAzHM",
+        "outputId": "af21455e-f315-46b2-f35c-c76b3f78e456",
+        "collapsed": true
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reator 1 dentro da faixa? True\n",
+            "Tanque A dentro da faixa? True\n",
+            "trocador H1 dentro da faixa? True\n",
+            "coluna 2B dentro da faixa? True\n"
           ]
         }
       ]
